--- a/products/sonar-project.properties
+++ b/products/sonar-project.properties
@@ -1,12 +1,5 @@
 sonar.projectKey=products-service
-sonar.projectName=Products Service
+sonar.projectName=products Service
 sonar.projectVersion=1.0
 sonar.sources=.
-sonar.exclusions=**/__pycache__/**,**/*.pyc,**/.venv/**,**/env/**,**/test_*,**/tests/**
-sonar.tests=.
-sonar.test.inclusions=**/test_*.py,**/tests/**,**/*_test.py
-sonar.python.version=3.11
 sonar.sourceEncoding=UTF-8
-sonar.language=py
-sonar.python.xunit.reportPath=test-reports/xunit.xml
-sonar.python.coverage.reportPaths=coverage.xml
