--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-global:
-  scrape_interval: 15s
+fastapi==0.95.2
+uvicorn>=0.23,<0.24
+SQLAlchemy==2.0.19
+psycopg2-binary==2.9.7
+python-dotenv==1.0.0
+pydantic==1.10.11
+httpx==0.24.1   # gateway needs it; harmless in others
+jinja2
+aiofiles
+python-multipart
+prometheus-fastapi-instrumentator
 
-scrape_configs:
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
-
-  - job_name: 'nodeexporter'
-    static_configs:
-      - targets: ['nodeexporter:9100']
-
-  - job_name: 'jenkins'
-    metrics_path: '/prometheus'
-    static_configs:
-      - targets: ['jenkins:8080']
