--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=monapp
-sonar.projectName=microservices-demo
+sonar.projectKey=users-service
+sonar.projectName=Users Service
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
